--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
         </div>
       </div>
       <div class="row third_pg_r3">
-        <div class="col-lg-3 col-md-6 col-sm-12 third_pg_r3_col">
-          <img src="./images/image1.png" alt="">
+        <div class="col-lg-3 col-md-6 col-sm-6 third_pg_r3_col">
+          <img src="./images/image1.png" class="w-100" alt="">
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 third_pg_r3_col">
-          <img src="./images/image2.png" alt="">
+        <div class="col-lg-3 col-md-6 col-sm-6 third_pg_r3_col">
+          <img src="./images/image2.png" class="w-100" alt="">
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 third_pg_r3_col">
-          <img src="./images/image3.png" alt="">
+        <div class="col-lg-3 col-md-6 col-sm-6 third_pg_r3_col">
+          <img src="./images/image3.png" class="w-100" alt="">
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-12 third_pg_r3_col">
-          <img src="./images/image4.png" alt="">
+        <div class="col-lg-3 col-md-6 col-sm-6 third_pg_r3_col">
+          <img src="./images/image4.png" class="w-100" alt="">
         </div>
       </div>
     </div>
